--- a/dataset-exploration.ipynb
+++ b/dataset-exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,25 +106,450 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0    61407\n",
-       "0.0    61108\n",
-       "7.0      114\n",
-       "Name: Z02, dtype: int64"
+       "(153287, 62)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Ytrain['Z02'].value_counts()"
+    "Xtrain.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rm_inx = []\n",
+    "for col in Xtest.columns:\n",
+    "    inx = (Xtest[col] == -9).values | (Xtest[col] == 7).values\n",
+    "    rm_inx.append(Xtest[inx].index.to_list())\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = [item for sublist in rm_inx for item in sublist]\n",
+    "temp = list(set(temp))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A01</th>\n",
+       "      <th>A02</th>\n",
+       "      <th>B01</th>\n",
+       "      <th>B02</th>\n",
+       "      <th>B03</th>\n",
+       "      <th>B04</th>\n",
+       "      <th>B05</th>\n",
+       "      <th>B06</th>\n",
+       "      <th>B07</th>\n",
+       "      <th>B08</th>\n",
+       "      <th>...</th>\n",
+       "      <th>F06</th>\n",
+       "      <th>F07</th>\n",
+       "      <th>F08</th>\n",
+       "      <th>F09</th>\n",
+       "      <th>F10</th>\n",
+       "      <th>F11</th>\n",
+       "      <th>F12</th>\n",
+       "      <th>G01</th>\n",
+       "      <th>G02</th>\n",
+       "      <th>G03</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>50000.000000</td>\n",
+       "      <td>50000.000000</td>\n",
+       "      <td>45084.000000</td>\n",
+       "      <td>45055.000000</td>\n",
+       "      <td>44987.000000</td>\n",
+       "      <td>45111.000000</td>\n",
+       "      <td>45065.000000</td>\n",
+       "      <td>44948.000000</td>\n",
+       "      <td>45107.000000</td>\n",
+       "      <td>45217.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>50000.000000</td>\n",
+       "      <td>50000.000000</td>\n",
+       "      <td>50000.000000</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>50000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>-0.027967</td>\n",
+       "      <td>-0.033611</td>\n",
+       "      <td>-0.031985</td>\n",
+       "      <td>-0.037331</td>\n",
+       "      <td>-0.038560</td>\n",
+       "      <td>-0.029188</td>\n",
+       "      <td>-0.034821</td>\n",
+       "      <td>-0.028687</td>\n",
+       "      <td>-0.029933</td>\n",
+       "      <td>-0.359988</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.010980</td>\n",
+       "      <td>0.007325</td>\n",
+       "      <td>0.007372</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.173366</td>\n",
+       "      <td>1.192333</td>\n",
+       "      <td>1.182300</td>\n",
+       "      <td>1.187258</td>\n",
+       "      <td>1.212267</td>\n",
+       "      <td>1.188447</td>\n",
+       "      <td>1.184468</td>\n",
+       "      <td>1.184323</td>\n",
+       "      <td>1.190854</td>\n",
+       "      <td>2.047360</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.027613</td>\n",
+       "      <td>1.025789</td>\n",
+       "      <td>1.027510</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-9.000000</td>\n",
+       "      <td>-9.000000</td>\n",
+       "      <td>-9.000000</td>\n",
+       "      <td>-9.000000</td>\n",
+       "      <td>-9.000000</td>\n",
+       "      <td>-9.000000</td>\n",
+       "      <td>-9.000000</td>\n",
+       "      <td>-9.000000</td>\n",
+       "      <td>-9.000000</td>\n",
+       "      <td>-9.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-2.961370</td>\n",
+       "      <td>-2.994660</td>\n",
+       "      <td>-3.074730</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>-0.681823</td>\n",
+       "      <td>-0.682084</td>\n",
+       "      <td>-0.685489</td>\n",
+       "      <td>-0.694818</td>\n",
+       "      <td>-0.687272</td>\n",
+       "      <td>-0.690814</td>\n",
+       "      <td>-0.692081</td>\n",
+       "      <td>-0.677786</td>\n",
+       "      <td>-0.682569</td>\n",
+       "      <td>-0.769993</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.783032</td>\n",
+       "      <td>-0.820579</td>\n",
+       "      <td>-0.784718</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>-0.005100</td>\n",
+       "      <td>-0.002967</td>\n",
+       "      <td>-0.003861</td>\n",
+       "      <td>-0.007801</td>\n",
+       "      <td>-0.001151</td>\n",
+       "      <td>0.001721</td>\n",
+       "      <td>-0.002568</td>\n",
+       "      <td>-0.007708</td>\n",
+       "      <td>-0.003800</td>\n",
+       "      <td>-0.061101</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000727</td>\n",
+       "      <td>0.001466</td>\n",
+       "      <td>0.004298</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.679032</td>\n",
+       "      <td>0.673307</td>\n",
+       "      <td>0.673285</td>\n",
+       "      <td>0.674512</td>\n",
+       "      <td>0.666494</td>\n",
+       "      <td>0.680274</td>\n",
+       "      <td>0.675021</td>\n",
+       "      <td>0.676562</td>\n",
+       "      <td>0.674667</td>\n",
+       "      <td>0.642938</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.796292</td>\n",
+       "      <td>0.817922</td>\n",
+       "      <td>0.790292</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 61 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                A01           A02           B01           B02           B03  \\\n",
+       "count  50000.000000  50000.000000  45084.000000  45055.000000  44987.000000   \n",
+       "mean      -0.027967     -0.033611     -0.031985     -0.037331     -0.038560   \n",
+       "std        1.173366      1.192333      1.182300      1.187258      1.212267   \n",
+       "min       -9.000000     -9.000000     -9.000000     -9.000000     -9.000000   \n",
+       "25%       -0.681823     -0.682084     -0.685489     -0.694818     -0.687272   \n",
+       "50%       -0.005100     -0.002967     -0.003861     -0.007801     -0.001151   \n",
+       "75%        0.679032      0.673307      0.673285      0.674512      0.666494   \n",
+       "max        7.000000      7.000000      7.000000      7.000000      7.000000   \n",
+       "\n",
+       "                B04           B05           B06           B07           B08  \\\n",
+       "count  45111.000000  45065.000000  44948.000000  45107.000000  45217.000000   \n",
+       "mean      -0.029188     -0.034821     -0.028687     -0.029933     -0.359988   \n",
+       "std        1.188447      1.184468      1.184323      1.190854      2.047360   \n",
+       "min       -9.000000     -9.000000     -9.000000     -9.000000     -9.000000   \n",
+       "25%       -0.690814     -0.692081     -0.677786     -0.682569     -0.769993   \n",
+       "50%        0.001721     -0.002568     -0.007708     -0.003800     -0.061101   \n",
+       "75%        0.680274      0.675021      0.676562      0.674667      0.642938   \n",
+       "max        7.000000      7.000000      7.000000      7.000000      7.000000   \n",
+       "\n",
+       "       ...           F06           F07           F08      F09      F10  \\\n",
+       "count  ...  50000.000000  50000.000000  50000.000000  50000.0  50000.0   \n",
+       "mean   ...      0.010980      0.007325      0.007372     -9.0     -9.0   \n",
+       "std    ...      1.027613      1.025789      1.027510      0.0      0.0   \n",
+       "min    ...     -2.961370     -2.994660     -3.074730     -9.0     -9.0   \n",
+       "25%    ...     -0.783032     -0.820579     -0.784718     -9.0     -9.0   \n",
+       "50%    ...      0.000727      0.001466      0.004298     -9.0     -9.0   \n",
+       "75%    ...      0.796292      0.817922      0.790292     -9.0     -9.0   \n",
+       "max    ...      7.000000      7.000000      7.000000     -9.0     -9.0   \n",
+       "\n",
+       "           F11      F12      G01      G02      G03  \n",
+       "count  50000.0  50000.0  50000.0  50000.0  50000.0  \n",
+       "mean      -9.0     -9.0     -9.0     -9.0     -9.0  \n",
+       "std        0.0      0.0      0.0      0.0      0.0  \n",
+       "min       -9.0     -9.0     -9.0     -9.0     -9.0  \n",
+       "25%       -9.0     -9.0     -9.0     -9.0     -9.0  \n",
+       "50%       -9.0     -9.0     -9.0     -9.0     -9.0  \n",
+       "75%       -9.0     -9.0     -9.0     -9.0     -9.0  \n",
+       "max       -9.0     -9.0     -9.0     -9.0     -9.0  \n",
+       "\n",
+       "[8 rows x 61 columns]"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xtest.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A01</th>\n",
+       "      <th>A02</th>\n",
+       "      <th>B01</th>\n",
+       "      <th>B02</th>\n",
+       "      <th>B03</th>\n",
+       "      <th>B04</th>\n",
+       "      <th>B05</th>\n",
+       "      <th>B06</th>\n",
+       "      <th>B07</th>\n",
+       "      <th>B08</th>\n",
+       "      <th>...</th>\n",
+       "      <th>F06</th>\n",
+       "      <th>F07</th>\n",
+       "      <th>F08</th>\n",
+       "      <th>F09</th>\n",
+       "      <th>F10</th>\n",
+       "      <th>F11</th>\n",
+       "      <th>F12</th>\n",
+       "      <th>G01</th>\n",
+       "      <th>G02</th>\n",
+       "      <th>G03</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 62 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [A01, A02, B01, B02, B03, B04, B05, B06, B07, B08, B09, B10, B11, B12, B13, B14, B15, B16, B17, B18, B19, B20, B21, B22, B23, B24, C01, C02, C03, D01, D02, D03, D04, D05, D06, D07, D08, D09, D10, D11, D12, D13, D14, D15, D16, D17, E01, F01, F02, F03, F04, F05, F06, F07, F08, F09, F10, F11, F12, G01, G02, G03]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 62 columns]"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xtest.drop(labels=temp)"
    ]
   },
   {
